removed fixed property from banner background to hopefully smoothen the scrolling experience and eliminate glitches on iphone

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4161,7 +4161,7 @@ body.landing #page-wrapper {
 	background-image:
 		linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
 		url("../../images/banner.webp");
-	background-attachment: fixed;
+	background-attachment: static;
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -4192,7 +4192,7 @@ body.is-mobile.landing #banner {
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-attachment: fixed
+	background-attachment: static;
 }
 
 body.is-mobile.landing .wrapper.style4 {
